Import of YAMAMOTO/WebService-Backlog-0.01_03 from CPAN.
gitpan-cpan-distribution: WebService-Backlog
gitpan-cpan-version:      0.01_03
gitpan-cpan-path:         YAMAMOTO/WebService-Backlog-0.01_03.tar.gz
gitpan-cpan-author:       YAMAMOTO
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -2,7 +2,6 @@
 abstract: Perl interface to Backlog.
 author: Ryuzo Yamamoto <yamamoto@nulab.co.jp>
 build_requires: 
-  Encode: 0
   Test::More: 0
 distribution_type: module
 generated_by: Module::Install version 0.67
@@ -19,4 +18,5 @@ requires:
   Carp: 0
   Class::Accessor::Fast: 0
   RPC::XML: 0
-version: 0.01_02
+  perl: 5.8.5
+version: 0.01_03
