Import of YAMAMOTO/WebService-Backlog-0.01_04 from CPAN.
gitpan-cpan-distribution: WebService-Backlog
gitpan-cpan-version:      0.01_04
gitpan-cpan-path:         YAMAMOTO/WebService-Backlog-0.01_04.tar.gz
gitpan-cpan-author:       YAMAMOTO
gitpan-cpan-maturity:     developer

--- a/META.yml
+++ b/META.yml
@@ -17,6 +17,7 @@ no_index:
 requires: 
   Carp: 0
   Class::Accessor::Fast: 0
+  Crypt::SSLeay: 0
   RPC::XML: 0
   perl: 5.8.5
-version: 0.01_03
+version: 0.01_04
