Import of YAMAMOTO/WebService-Backlog-0.02 from CPAN.
gitpan-cpan-distribution: WebService-Backlog
gitpan-cpan-version:      0.02
gitpan-cpan-path:         YAMAMOTO/WebService-Backlog-0.02.tar.gz
gitpan-cpan-author:       YAMAMOTO
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -19,5 +19,5 @@ requires:
   Class::Accessor::Fast: 0
   Crypt::SSLeay: 0
   RPC::XML: 0
-  perl: 5.8.5
-version: 0.01_04
+  perl: 5.8.1
+version: 0.02
