--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,11 @@
 --- 
 abstract: Perl interface to Backlog.
-author: Ryuzo Yamamoto <yamamoto@nulab.co.jp>
+author: 
+  - Ryuzo Yamamoto <yamamoto@nulab.co.jp>
 build_requires: 
   Test::More: 0
 distribution_type: module
-generated_by: Module::Install version 0.67
+generated_by: Module::Install version 0.68
 license: perl
 meta-spec: 
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
@@ -20,4 +21,4 @@ requires:
   Crypt::SSLeay: 0
   RPC::XML: 0
   perl: 5.8.1
-version: 0.03
+version: 0.04
