--- a/META.yml
+++ b/META.yml
@@ -1,24 +1,24 @@
---- 
-abstract: Perl interface to Backlog.
-author: 
-  - Ryuzo Yamamoto <yamamoto@nulab.co.jp>
-build_requires: 
+---
+abstract: 'Perl interface to Backlog.'
+author:
+  - 'Ryuzo Yamamoto <yamamoto@nulab.co.jp>'
+build_requires:
   Test::More: 0
 distribution_type: module
-generated_by: Module::Install version 0.68
+generated_by: 'Module::Install version 0.71'
 license: perl
-meta-spec: 
+meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
   version: 1.3
 name: WebService-Backlog
-no_index: 
-  directory: 
+no_index:
+  directory:
     - inc
     - t
-requires: 
+requires:
   Carp: 0
   Class::Accessor::Fast: 0
   Crypt::SSLeay: 0
   RPC::XML: 0
   perl: 5.8.1
-version: 0.04
+version: 0.05
