--- a/META.yml
+++ b/META.yml
@@ -3,13 +3,16 @@ abstract: 'Perl interface to Backlog.'
 author:
   - 'Ryuzo Yamamoto <yamamoto@nulab.co.jp>'
 build_requires:
+  ExtUtils::MakeMaker: 6.42
   Test::More: 0
+configure_requires:
+  ExtUtils::MakeMaker: 6.42
 distribution_type: module
-generated_by: 'Module::Install version 0.71'
+generated_by: 'Module::Install version 0.85'
 license: perl
 meta-spec:
-  url: http://module-build.sourceforge.net/META-spec-v1.3.html
-  version: 1.3
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
 name: WebService-Backlog
 no_index:
   directory:
@@ -19,6 +22,9 @@ requires:
   Carp: 0
   Class::Accessor::Fast: 0
   Crypt::SSLeay: 0
+  Filter::Util::Call: 0
   RPC::XML: 0
   perl: 5.8.1
-version: 0.07
+resources:
+  license: http://dev.perl.org/licenses/
+version: 0.08
